Fix contrast errors

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 header {
   display: flex;
   height: 4em;
-  background-color: #5894cd;
+  background-color: #4277a8;
   align-items: center;
   justify-content: space-around;
 }
