--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -22,5 +22,5 @@
   position: fixed;
   top: 10px;
   display: flex;
-  color: #5894cd;
+  color: #4277a8;
 }
